# postera

./: .gitignore  Cargo.toml  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  fly.toml  my-wallet.json  shielded-wallet.json
.claude/: settings.local.json
circuits/: README.md  package-lock.json  package.json
params/: proving.params  verifying.params
plonky2-wasm/: Cargo.toml  build.sh  test-node.mjs
plonky2-wasm/src/: lib.rs
src/: config.rs  lib.rs  main.rs
src/consensus/: difficulty.rs  mod.rs  pow.rs
src/core/: block.rs  blockchain.rs  mod.rs  state.rs  transaction.rs
src/crypto/: binding.rs  commitment.rs  keys.rs  merkle_tree.rs  mod.rs  note.rs  nullifier.rs  poseidon.rs  proof.rs  setup.rs  signature.rs  snarkjs.rs
src/crypto/circuits/: mod.rs  output.rs  poseidon_gadget.rs  spend.rs
src/crypto/pq/: circuit_pq.rs  commitment_pq.rs  merkle_pq.rs  mod.rs  poseidon_pq.rs  proof_pq.rs
src/explorer/: server.rs
src/network/: api.rs  discovery.rs  mempool.rs  mod.rs  sync.rs
src/storage/: db.rs
src/wallet/: mod.rs  wallet.rs
tests/: e2e_zkproof_test.rs  poseidon_consistency_test.rs
wallet/: index.html  package-lock.json  package.json  vite.config.ts
wallet/src/: App.css  Explorer.css  Explorer.tsx  Landing.css  Landing.tsx  PlonkyTest.tsx  Wallet.tsx  api.ts  binding.ts  commitment-pq.ts  index.css  integration-test.ts  main.tsx  migration.ts  poseidon-pq.ts  prover-pq.ts  prover.ts  shielded-crypto.ts  shielded-wallet.ts  test-binding.ts  test-poseidon.ts  test-prover.ts  transaction-builder.ts  types.ts
whitepaper/: postera-whitepaper.tex
