[package]
name = "postera"
version = "0.1.0"
edition = "2021"
description = "A cryptocurrency using post-quantum cryptography"
license = "MIT"

[dependencies]
# Post-quantum cryptography (NIST FIPS 204 ML-DSA-65)
fips204 = "0.4"

# Hashing
sha2 = "0.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Networking
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
reqwest = { version = "0.12", features = ["json"] }

# Database
sled = "0.34"

# Utilities
hex = "0.4"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
