[package]
name = "postera"
version = "0.1.0"
edition = "2021"
description = "A cryptocurrency using post-quantum cryptography"
license = "MIT"

[dependencies]
# Post-quantum cryptography (NIST FIPS 204 ML-DSA-65)
fips204 = "0.4"

# Hashing
sha2 = { version = "0.10", features = ["asm", "compress"] }
blake2 = "0.10"
light-poseidon = "0.2"

# zk-SNARKs (Groth16 on BN254 for compatibility with circomlibjs/snarkjs) - V1 LEGACY
ark-groth16 = "0.4"
ark-bls12-381 = "0.4"
ark-bn254 = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-std = "0.4"
ark-serialize = { version = "0.4", features = ["derive"] }
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-snark = "0.4"
ark-crypto-primitives = { version = "0.4", features = ["commitment", "merkle_tree", "prf", "sponge", "r1cs"] }

# Post-quantum ZK proofs (Plonky2 STARKs) - V2 QUANTUM-SAFE
# Plonky2 provides FRI-based proofs using only hash assumptions (quantum-resistant)
# Supports browser WASM compilation for client-side proving
plonky2 = "1.0"
plonky2_field = "1.0"

# Encryption (for note encryption)
chacha20poly1305 = "0.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Networking
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs", "limit"] }
tower_governor = "0.4"
tower = "0.5"
reqwest = { version = "0.12", features = ["json"] }

# Database
sled = "0.34"

# Utilities
hex = "0.4"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
anyhow = "1"
lazy_static = "1.4"

# TUI
ratatui = "0.27"
crossterm = "0.28"

[[bin]]
name = "postera-miner-monitor"
path = "src/bin/miner_monitor.rs"

[dev-dependencies]
tempfile = "3"
